<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.home.androidtestgame.student.LogInActivity"
        android:background="@drawable/background">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lblRegister"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="50dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/hintName"
            android:inputType="text"
            android:textColorHint="@color/blue" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_faculty_number"
        android:layout_below="@+id/text_input_username">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_fNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/hintFacultyNumber"
            android:inputType="text"
            android:textColorHint="@color/blue" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_password"
        android:layout_below="@+id/text_input_faculty_number">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/blue" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/txtChoose"
        android:textAlignment="center"
        android:layout_below="@+id/text_input_password"
        android:textSize="18dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_below="@+id/tv_choose">

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/sp_typeSpinner"
        android:layout_below="@+id/tv_choose"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/hintGender"
        android:textAlignment="center"
        android:layout_below="@+id/sp_typeSpinner"
        android:textSize="18dp" />

    <RadioGroup
        android:gravity="center"
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gender"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:text="@string/txtMale" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:text="@string/txtFemale" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="81dp"
        android:background="@drawable/buttonstyleselector"
        android:text="@string/btnOk"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:background="@drawable/buttonstyleselector"
        android:text="@string/btnExit"
        android:textColor="@color/white" />

</RelativeLayout>


