<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="com.example.home.androidtestgame.student.LogInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="167dp"
                android:layout_gravity="center"
                android:text="Влизане на преподавател"
                android:textColor="@color/blue"
                android:textAlignment="center"
                android:textSize="50dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_teacher_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hintName"
                    android:inputType="text"
                    android:textColorHint="#2c5aff"
                    android:text="@string/txtName"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_teacher_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword"
                    android:textColorHint="@color/blue"
                    android:text="@string/txtPassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonstyleselector"
                android:text="@string/btnLogin"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>
