<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.home.androidtestgame.student.LogInActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="114dp"
                android:layout_gravity="center"
                android:text="@string/lblUpdateStudentProfile"
                android:textColor="#2c5aff"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:textSize="50dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_username"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="15">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_updateUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hintName"
                    android:inputType="text"
                    android:textColorHint="@color/blue" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_password"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_updatePassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword"
                    android:textColorHint="@color/blue" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/txtMale" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/txtFemale" />
            </RadioGroup>
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="220dp"
                android:background="@drawable/buttonstyleselector"
                android:text="@string/btnOk"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/buttonstyleselector"
                android:text="@string/btnExit"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>